[package]
name = "riffy"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.20"
tokio-rustls = "0.22"
hyper-rustls = "0.23"
dotenv = "0.15"
rustls-pemfile = "1.0"

[profile.release]
lto = true
